--- a/src/main/resources/templates/user-register.html
+++ b/src/main/resources/templates/user-register.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
+                <li onclick="window.location.href='home.html'" class="nav-item"><a class="nav-link" href="#">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Rankings</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Buscar</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
