--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,6 +29,11 @@
         <div class="header-right">
             <button class="btn btn-ghost">Login</button>
             <button onclick="window.location.href='user-register.html'" class="btn btn-primary">Entrar / Registrar</button>
+            <button onclick="window.location.href='profile.html'" class="btn btn-icon" title="Meu perfil">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" width="22" height="22">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 7.5a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 20.25a8.25 8.25 0 0115 0" />
+                </svg>
+            </button>
         </div>
     </div>
 </header>
