desenvolvendo front de desafios

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -18,11 +18,11 @@
 <header class="header">
     <div class="container header-content">
         <div class="header-left">
-            <a href="index.html" class="logo">APPCORE</a>
+            <a onclick="window.location.href='home.html'" class="logo">APPCORE</a>
             <nav class="nav">
                 <a onclick="window.location.href='home.html'" class="nav-link">Home</a>
                 <a onclick="window.location.href='course.html'" class="nav-link">Cursos</a>
-                <a href="#desafios" class="nav-link">Desafios</a>
+                <a onclick="window.location.href='challenge.html'" class="nav-link">Desafios</a>
                 <a href="#eventos" class="nav-link">Eventos</a>
             </nav>
         </div>
