--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div class="header-content">
             <div class="header-left">
-                <a href="appcore.html" class="logo">APPCORE</a>
+                <a onclick="window.location.href='home.html'"class="logo">APPCORE</a>
                 <nav class="nav">
                     <a onclick="window.location.href='home.html'" class="nav-link">Home</a>
                     <a onclick="window.location.href='course.html'" class="nav-link active">Cursos</a>
-                    <a href="#" class="nav-link">Desafios</a>
+                    <a onclick="window.location.href='challenge.html'" class="nav-link">Desafios</a>
                     <a href="#" class="nav-link">Eventos</a>
                 </nav>
             </div>
