--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -19,6 +19,7 @@
                     <a onclick="window.location.href='home.html'" class="nav-link">Home</a>
                     <a onclick="window.location.href='course.html'" class="nav-link active">Cursos</a>
                     <a onclick="window.location.href='challenge.html'" class="nav-link">Desafios</a>
+                    <a onclick="window.location.href='ranking.html'" class="nav-link">Ranking</a>
                 </nav>
             </div>
             <div class="header-right">
@@ -79,10 +80,9 @@
             <div class="footer-section">
                 <h4 class="footer-heading">Plataforma</h4>
                 <ul class="footer-links">
-                    <li><a href="#cursos">Cursos</a></li>
-                    <li><a href="#desafios">Desafios</a></li>
-                    <li><a href="#eventos">Eventos</a></li>
-                    <li><a href="#certificados">Certificados</a></li>
+                    <li><a onclick="window.location.href='course.html'">Cursos</a></li>
+                    <li><a onclick="window.location.href='challenge.html'">Desafios</a></li>
+                    <li><a onclick="window.location.href='ranking.html'">Ranking</a></li>
                 </ul>
             </div>
         </div>
